# Casino

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  reel.cpp  reel.h
